<resources>
    <string name="app_name">ProjekatMobilne</string>
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="lorem_ipsum">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam in scelerisque sem. Mauris
        volutpat, dolor id interdum ullamcorper, risus dolor egestas lectus, sit amet mattis purus
        dui nec risus. Maecenas non sodales nisi, vel dictum dolor. Class aptent taciti sociosqu ad
        litora torquent per conubia nostra, per inceptos himenaeos. Suspendisse blandit eleifend
        diam, vel rutrum tellus vulputate quis. Aliquam eget libero aliquet, imperdiet nisl a,
        ornare ex. Sed rhoncus est ut libero porta lobortis. Fusce in dictum tellus.\n\n
        Suspendisse interdum ornare ante. Aliquam nec cursus lorem. Morbi id magna felis. Vivamus
        egestas, est a condimentum egestas, turpis nisl iaculis ipsum, in dictum tellus dolor sed
        neque. Morbi tellus erat, dapibus ut sem a, iaculis tincidunt dui. Interdum et malesuada
        fames ac ante ipsum primis in faucibus. Curabitur et eros porttitor, ultricies urna vitae,
        molestie nibh. Phasellus at commodo eros, non aliquet metus. Sed maximus nisl nec dolor
        bibendum, vel congue leo egestas.\n\n
        Sed interdum tortor nibh, in sagittis risus mollis quis. Curabitur mi odio, condimentum sit
        amet auctor at, mollis non turpis. Nullam pretium libero vestibulum, finibus orci vel,
        molestie quam. Fusce blandit tincidunt nulla, quis sollicitudin libero facilisis et. Integer
        interdum nunc ligula, et fermentum metus hendrerit id. Vestibulum lectus felis, dictum at
        lacinia sit amet, tristique id quam. Cras eu consequat dui. Suspendisse sodales nunc ligula,
        in lobortis sem porta sed. Integer id ultrices magna, in luctus elit. Sed a pellentesque
        est.\n\n
        Aenean nunc velit, lacinia sed dolor sed, ultrices viverra nulla. Etiam a venenatis nibh.
        Morbi laoreet, tortor sed facilisis varius, nibh orci rhoncus nulla, id elementum leo dui
        non lorem. Nam mollis ipsum quis auctor varius. Quisque elementum eu libero sed commodo. In
        eros nisl, imperdiet vel imperdiet et, scelerisque a mauris. Pellentesque varius ex nunc,
        quis imperdiet eros placerat ac. Duis finibus orci et est auctor tincidunt. Sed non viverra
        ipsum. Nunc quis augue egestas, cursus lorem at, molestie sem. Morbi a consectetur ipsum, a
        placerat diam. Etiam vulputate dignissim convallis. Integer faucibus mauris sit amet finibus
        convallis.\n\n
        Phasellus in aliquet mi. Pellentesque habitant morbi tristique senectus et netus et
        malesuada fames ac turpis egestas. In volutpat arcu ut felis sagittis, in finibus massa
        gravida. Pellentesque id tellus orci. Integer dictum, lorem sed efficitur ullamcorper,
        libero justo consectetur ipsum, in mollis nisl ex sed nisl. Donec maximus ullamcorper
        sodales. Praesent bibendum rhoncus tellus nec feugiat. In a ornare nulla. Donec rhoncus
        libero vel nunc consequat, quis tincidunt nisl eleifend. Cras bibendum enim a justo luctus
        vestibulum. Fusce dictum libero quis erat maximus, vitae volutpat diam dignissim.
    </string>
    <string name="add_category">Dodaj novu kategoriju</string>

    <string-array name="frequency_array">
        <item>ONE_TIME</item>
        <item>RECURRING</item>
    </string-array>

    <string-array name="difficulty_array">
        <item>VERY_EASY</item>
        <item>EASY</item>
        <item>HARD</item>
        <item>EXTREME</item>
    </string-array>

    <string-array name="importance_array">
        <item>NORMAL</item>
        <item>IMPORTANT</item>
        <item>EXTREME</item>
        <item>SPECIAL</item>
    </string-array>

    <string-array name="unit_array">
        <item>DAY</item>
        <item>WEEK</item>
        <item>MONTH</item>
        <item>YEAR</item>
    </string-array>
    <string name="my_tasks">Moji Zadaci</string>
    <string name="new_task">Novi Zadatak</string>

    <!-- AUTH -->
    <string name="login">Prijava</string>
    <string name="register">Registracija</string>
    <string name="email">Email</string>
    <string name="password">Lozinka</string>
    <string name="confirm_password">Potvrdi lozinku</string>
    <string name="username">Korisničko ime</string>
    <string name="select_avatar">Izaberi avatar</string>
    <string name="login_button">PRIJAVI SE</string>
    <string name="register_button">REGISTRUJ SE</string>
    <string name="no_account">Nemaš nalog?</string>
    <string name="have_account">Već imaš nalog?</string>
    <string name="go_to_register">Registruj se</string>
    <string name="go_to_login">Prijavi se</string>

    <!-- DRAWER MENU -->
    <string name="drawer_home">Početna</string>
    <string name="drawer_profile">Profil</string>
    <string name="drawer_categories">Kategorije</string>
    <string name="drawer_tasks">Zadaci</string>
    <string name="drawer_statistics">Statistika</string>
    <string name="drawer_logout">Odjavi se</string>
    <string name="drawer_calendar">Kalendar</string>

    <!-- PROFILE -->
    <string name="level">Nivo</string>
    <string name="title_label">Titula</string>
    <string name="pp_label">PP (Snaga)</string>
    <string name="xp_label">XP</string>
    <string name="coins_label">Novčići</string>
    <string name="badges_label">Bedževi</string>
    <string name="equipment_label">Oprema</string>
    <string name="qr_code">QR Kod</string>
    <string name="change_password">Promeni lozinku</string>

    <!-- STATS -->
    <string name="statistics">Statistika</string>
    <string name="stats_coming_soon">Statistika dolazi uskoro...</string>

    <!-- TOOLBAR -->
    <string name="settings">Podešavanja</string>
    <string name="navigation_drawer_open">Otvori meni</string>
    <string name="navigation_drawer_close">Zatvori meni</string>

    <!-- MESSAGES -->
    <string name="email_verification_sent">Proveri email za aktivaciju naloga!</string>
    <string name="email_not_verified">Aktiviraj nalog preko email-a!</string>
    <string name="login_success">Dobrodošao!</string>
    <string name="logout_confirm">Da li želiš da se odjaviš?</string>
    <string name="yes">Da</string>
    <string name="cancel">Otkaži</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="ponovo_unesi_novu_lozinku">Ponovo unesi novu lozinku</string>
    <string name="potvrdi">Potvrdi</string>
    <string name="stara_lozinka">Stara lozinka</string>
    <string name="unesi_staru_lozinku">Unesi staru lozinku</string>
    <string name="nova_lozinka">Nova lozinka</string>
    <string name="unesi_novu_lozinku">Unesi novu lozinku</string>
    <string name="potvrdi_novu_lozinku">Potvrdi novu lozinku</string>


    <string name="drawer_level_progress">Napredovanje</string>
    <string name="level_progress">Napredovanje kroz nivoe</string>

    <string name="friends">Prijatelji</string>
    <string name="friend_requests">Zahtevi</string>
    <string name="sent_requests">Poslati</string>
    <string name="search_users">Pretraga</string>
    <string name="search_by_username">Pretraži po username...</string>
    <string name="scan_qr_code">Skeniraj QR kod</string>
    <string name="add_friend">Dodaj za prijatelja</string>
    <string name="already_friends">Već prijatelji ✓</string>
    <string name="request_sent">Zahtev poslat...</string>
    <string name="accept">Prihvati</string>
    <string name="decline">Odbij</string>
    <string name="pending">Pending...</string>
    <string name="cancel_request">Otkaži zahtev</string>
    <string name="view_profile">Pogledaj profil</string>

    <!-- ALLIANCE -->
    <string name="alliance">Savez</string>
    <string name="no_alliance">Nemaš savez</string>
    <string name="create_alliance">Kreiraj novi savez</string>
    <string name="alliance_info">Info</string>
    <string name="alliance_members">Članovi</string>
    <string name="alliance_chat">Chat</string>
    <string name="alliance_options">Opcije</string>
    <string name="alliance_name">Naziv saveza</string>
    <string name="alliance_leader">Vođa</string>
    <string name="member_count">Broj članova</string>
    <string name="created_on">Datum kreiranja</string>
    <string name="invite_friends">Pozovi prijatelje</string>
    <string name="leave_alliance">Napusti savez</string>
    <string name="destroy_alliance">Uništi savez</string>
    <string name="open_chat">Otvori Chat</string>
    <string name="send_message">Pošalji</string>
    <string name="type_message">Unesi poruku...</string>
    <string name="mission_active">Aktivna misija</string>
    <string name="cannot_leave_mission_active">Ne možeš napustiti savez dok je misija aktivna</string>

    <!-- NOTIFICATIONS -->
    <string name="notification_friend_request_title">Novi zahtev za prijateljstvo</string>
    <string name="notification_friend_accepted_title">Zahtev prihvaćen</string>
    <string name="notification_alliance_invite_title">Poziv u savez</string>
    <string name="notification_member_joined_title">Novi član</string>
    <string name="notification_new_message_title">Nova poruka</string>
</resources>